<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/ApplicationInfoText"
        android:text="@string/ApplicationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Ip_address"
        android:text="@string/DefaultIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ApplicationInfoText"/>
    <EditText
        android:id="@+id/Port"
        android:text="@string/DefaultPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ip_address"/>
    <Button
        android:id="@+id/ButtonClear"
        android:text="Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Port"/>

    <LinearLayout
        android:id="@+id/MouseButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/LeftMouseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LeftMouseButton" />
        <Button
            android:id="@+id/RightMouseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RightMouseButton" />
    </LinearLayout>
</RelativeLayout>
